# rust-ncurses-example

./: Cargo.toml  readme.md
src/: main.rs
