[package]
name = "rand_trees"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kira = "0.7.1"
pancurses = { version = "0.17.0", features = ["win32"] }
rand = "0.8.5"
# too hard to use
# rodio = "0.16.0"
